[gd_scene load_steps=17 format=3 uid="uid://c8dg7qa8lcm1n"]

[ext_resource type="Script" path="res://scenes/deco/plafonnier.gd" id="1_tlhyp"]
[ext_resource type="ArrayMesh" uid="uid://cidkwlgvge22u" path="res://modeles3d/plafonnier.obj" id="1_u7jj2"]
[ext_resource type="Texture2D" uid="uid://bsmsy8rnicc61" path="res://images/textures/vieuxtissustrans.png" id="2_k6362"]
[ext_resource type="Texture2D" uid="uid://boyf1y87wrttw" path="res://images/textures/Rust004_1K-JPG_Metalness (1).png" id="3_71pay"]
[ext_resource type="Texture2D" uid="uid://bpvvx4mqxypvl" path="res://images/textures/boisplain 2.png" id="4_40ojr"]
[ext_resource type="PackedScene" uid="uid://cu33cwlog6e40" path="res://scenes/deco/candle_fire.tscn" id="5_0dxqh"]
[ext_resource type="AudioStream" uid="uid://dwb5rj5ayxxo2" path="res://sons/flint-strike-38491.wav" id="7_tspdm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_silfk"]
transparency = 1
albedo_texture = ExtResource("2_k6362")
uv1_scale = Vector3(3, 2, 1)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k4m3r"]
albedo_color = Color(0.631832, 0.560271, 0.354473, 1)
metallic_specular = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cl452"]
albedo_texture = ExtResource("3_71pay")
metallic = 0.75
uv1_offset = Vector3(-0.015, -0.035, 0.04)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rllv8"]
albedo_texture = ExtResource("4_40ojr")
metallic = 0.5
roughness = 0.75
uv1_scale = Vector3(2, 2, 2)
uv1_offset = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tt4l1"]
points = PackedVector3Array(0.208801, 0.140725, 0.00654815, -0.0304925, -0.0267966, -0.25669, -0.206051, 0.124763, 0.00654815, -0.0304925, -0.0267966, 0.25399, -0.0304925, 0.260392, -0.0252443, 0.25669, -0.0347619, 0.0304925, -0.25399, -0.0347619, 0.0304925, -0.00654815, 0.156655, 0.206051, 0.00929811, 0.116798, -0.216749, 0.248692, 0.0130924, -0.0332424, 0.0332424, 0.0130924, 0.245942, -0.245942, 0.0130924, -0.0332424, 0.025, 0.258923, -0.025, -0.0145463, 0.116798, -0.216749, 0.0252443, 0.00512712, -0.25669, 0.0252443, 0.260392, 0.0304925, -0.0304925, 0.260392, 0.0304925, -0.25399, 0.00512712, 0.0304925, 0.216749, 0.132728, -0.00929811, 0.25669, 0.00512712, 0.0304925, 0.00929811, 0.140725, 0.213999, 0.0246183, -0.0230345, -0.25, -0.0304925, 0.00512712, 0.25399, -0.0304925, 0.00512712, -0.25669, -0.213999, 0.108832, -0.00929811, -0.0145463, 0.140725, 0.213999, 0.024871, -0.0245529, 0.25, 0.244287, -0.0274, -0.0240837, -0.241587, -0.0274, -0.0240837, 0.0332424, 0.0130924, -0.248692, 0.00134999, 0.156655, 0.206051, -0.213999, 0.108832, 0.0145463)

[sub_resource type="Animation" id="Animation_lfp6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Plafonnier:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.740462, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plafonnier:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_28q7i"]
resource_name = "balancement"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Plafonnier:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.23333, 2.56667, 5, 7.23333, 7.56667, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.740462, 0), Vector3(0.011605, 0.740462, 0), Vector3(0.011605, 0.740462, 0), Vector3(0, 0.74, 0), Vector3(-0.0116309, 0.74, 0), Vector3(-0.0116309, 0.74, 0), Vector3(0, 0.74, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plafonnier:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.23333, 2.56667, 5, 7.23333, 7.56667, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0429526), Vector3(0, 0, 0.0429526), Vector3(0, 0, 0), Vector3(0, 0, -0.0436332), Vector3(0, 0, -0.0436332), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6j1dw"]
_data = {
"RESET": SubResource("Animation_lfp6k"),
"balancement": SubResource("Animation_28q7i")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_5dbxd"]

[node name="plafonnier" type="Node3D" groups=["allumable"]]
script = ExtResource("1_tlhyp")

[node name="Plafonnier" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.740462, 0)
layers = 4
mesh = ExtResource("1_u7jj2")
surface_material_override/0 = SubResource("StandardMaterial3D_silfk")
surface_material_override/1 = SubResource("StandardMaterial3D_k4m3r")
surface_material_override/2 = SubResource("StandardMaterial3D_cl452")
surface_material_override/3 = SubResource("StandardMaterial3D_rllv8")

[node name="StaticBody3D" type="StaticBody3D" parent="Plafonnier"]
collision_layer = 4
collision_mask = 19

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plafonnier/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_tt4l1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6j1dw")
}

[node name="Plafonnier2" type="Node3D" parent="."]

[node name="Plafonnier" type="Node3D" parent="Plafonnier2" groups=["allumable"]]

[node name="Plafonnier" type="StaticBody3D" parent="Plafonnier2/Plafonnier" groups=["allumable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
collision_layer = 4
collision_mask = 19

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plafonnier2/Plafonnier/Plafonnier"]
transform = Transform3D(0.353553, 0, 0.353553, 0, 0.5, 0, -0.353553, 0, 0.353553, 0, 1.00729, 0)
shape = SubResource("BoxShape3D_5dbxd")

[node name="fired_candle2" parent="." instance=ExtResource("5_0dxqh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20021, 0.884353, 0)
visible = false

[node name="fired_candle4" parent="." instance=ExtResource("5_0dxqh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.873443, -0.204235)
visible = false

[node name="fired_candle5" parent="." instance=ExtResource("5_0dxqh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.894768, 0.199559)
visible = false

[node name="fired_candle3" parent="." instance=ExtResource("5_0dxqh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.200749, 0.874097, 0)
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tspdm")

[node name="Timer" type="Timer" parent="."]
wait_time = 900.0
one_shot = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.888452, 0)
visible = false
layers = 4
light_color = Color(0.935439, 0.606219, 0.0416953, 1)
light_energy = 10.0
light_size = 0.5
shadow_enabled = true
